--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,66 @@
+body {
+	background-image: url("../images/outerspace_landscape.jpeg");
+	background-size: cover;
+}
 
+nav {
+	position: fixed;
+	padding-left: 60px;
+	padding-right: 60px;
+	background-color: gray;
+	width: 100%;
+}
+
+nav img {
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	padding-right: 10px;
+}
+
+nav ul {
+	list-style: none;
+}
+
+li {
+	display: inline-block;
+}
+
+li::after {
+	content: " |";
+}
+
+span {
+	display: block;
+	position: absolute;
+	border: 10px dotted green;
+	width: 600px;
+	height: 300px;
+	margin-left: 50%;
+	margin-right: 50%;
+	margin-top: 50%;
+	margin-bottom: 50%;
+	transform: translate(-50%,-50%);
+}
+
+span img {
+	height: 200px;
+	width: 200px;
+	position: absolute;
+}
+
+.cat {
+	left: -100px;
+	top: -100px;
+}
+
+.dog {
+	bottom: -100px;
+	right: -100px;
+}
+
+div {
+	height: 100%;
+	width: 100%;
+	position: relative;
+}
